# electrical-network-theory

./: .gitignore  README.md  pyproject.toml
examples/steady-state/: casestudy_capacitorbank.py  example_01.py  example_02.py  example_03.py  example_04.py  example_05.py
examples/steady-state/example_06/: ex6_script.py
examples/transient/: casestudy_capacitor_bank.py  example_01.py
src/ent/misc/: __init__.py  delta_wye.py  impedance.py  phasor.py
src/ent/steady_state/: __init__.py
src/ent/steady_state/elements/: __init__.py  base.py  combinators.py  elements.py  formatting.py  repeat.py  utils.py
src/ent/steady_state/network/: network.py
src/ent/transient/: __init__.py  network.py  solver.py  voltage_sources.py
